tests/error/modules_lib_no_project.vibe
// ERROR: lib. imports require a vibe.toml project
use lib.mylib.foo

fn main() -> i32 {
    return 0
}
